Fix elements overlapping in some pages where the vertical height is small

--- a/src/Web/iCareNow.Web/wwwroot/css/pages/aboutUs/aboutUs.scss
+++ b/src/Web/iCareNow.Web/wwwroot/css/pages/aboutUs/aboutUs.scss
@@ -6,6 +6,8 @@
 @include nature-background(fixed);
 
 .first-section {
+    min-height: 600px;
+
     .about-us-heading-container {
         display: flex;
         justify-content: left;
