--- a/src/Web/iCareNow.Web/wwwroot/css/pages/feedback/feedback.scss
+++ b/src/Web/iCareNow.Web/wwwroot/css/pages/feedback/feedback.scss
@@ -7,11 +7,12 @@
 
 .first-section {
     position: relative;
+    min-height: 600px;
     height: calc(100vh - $nav-height);
     padding: 15vh 0 0 0;
 
     @include panel(1);
-    
+
     .textarea-message {
         width: 450px;
         height: 250px;
