--- a/src/Web/iCareNow.Web/wwwroot/css/pages/identity/register.scss
+++ b/src/Web/iCareNow.Web/wwwroot/css/pages/identity/register.scss
@@ -7,6 +7,7 @@
 
 .first-section {
     position: relative;
+    min-height: 600px;
     height: calc(100vh - $nav-height);
     padding: 15vh 0 0 0;
 
